force-app/core/main/default/objects/Demo_Persona_Insight__c/Demo_Persona_Insight__c.object-meta.xml
<CustomObject>
    <label>Persona Insight</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Persona Insight ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Persona Insights</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>