force-app/core/main/default/objects/Demo_Persona_Insight__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Cross-Sell</fullName><default>false</default><label>Cross-Sell</label></value>
            <value><fullName>Next-Best-Action</fullName><default>false</default><label>Next-Best-Action</label></value>
            <value><fullName>Risk</fullName><default>false</default><label>Risk</label></value>
            <value><fullName>Retention</fullName><default>false</default><label>Retention</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>