force-app/core/main/default/objects/Demo_Persona_Insight__c/fields/Why_This_Suggestion__c.field-meta.xml
<CustomField>
    <fullName>Why_This_Suggestion__c</fullName>
    <label>Why This Suggestion</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>